--- a/simple_conf.cfg
+++ b/simple_conf.cfg
@@ -1,8 +1,8 @@
 [input_output]
-input_path=cm138a.blif
+input_path=full_adder_1bit.v
 ; input_format can get one of the values: verilog, blif
-input_format=blif
-output_path=cm138a_output
+input_format=verilog
+output_path=full_adder_1bit_output
 
 [abc]
 abc_dir_path=/home/adi/abc/alanmi-abc-eac02745facf
